--- a/chattersite/src/Components/Components.css
+++ b/chattersite/src/Components/Components.css
@@ -161,12 +161,13 @@
     margin: 1rem 10rem;
     background-color: rgb(228, 118, 118);
     box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+    opacity: 50%;
 }
 
-.createRoom:hover{
+/* .createRoom:hover{
     opacity: 50%;
     cursor: pointer;
-}
+} */
 
 .stateToggle{
     width: 2rem;
